<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/carousalLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="20dp"
        app:layoutDescription="@xml/carousel_motion_scene"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/wordlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/wordlist" />

        <TextView
            android:id="@+id/hosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/wordlist"
            app:layout_constraintEnd_toEndOf="@id/s3Buckets"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/hosts" />

        <TextView
            android:id="@+id/s3Buckets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/hosts"
            app:layout_constraintEnd_toEndOf="@id/allAssets"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/s3_buckets" />

        <TextView
            android:id="@+id/allAssets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/s3Buckets"
            app:layout_constraintEnd_toEndOf="@id/apps"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="20dp"
            android:text="@string/all_assets" />

        <TextView
            android:id="@+id/apps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/apps" />

        <androidx.constraintlayout.helper.widget.Carousel
            android:id="@+id/carousel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:carousel_backwardTransition="@id/backward"
            app:carousel_firstView="@id/start"
            app:carousel_forwardTransition="@id/forward"
            app:carousel_infinite="true"
            app:carousel_nextState="@id/next"
            app:carousel_previousState="@id/previous"
            app:constraint_referenced_ids="wordlist,hosts,s3Buckets" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
